swagger-> csv support
